--- a/src/index.html
+++ b/src/index.html
@@ -73,14 +73,14 @@
           </div>
         </div>
       </main>
-      <div id="alert" role="alert" class="fixed bottom-4 right-4 alert alert-horizontal">
+      <div id="alert" role="alert" class="fixed my-alert bottom-4 right-4 alert alert-horizontal">
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" class="stroke-info h-6 w-6 shrink-0">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 16h-1v-4h-1m1-4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path>
         </svg>
-        <span id="alertmessage">pesan peringatan.</span>
+        <span id="alertMessage">pesan peringatan.</span>
         <div>
-          <button onclick="" class="btn btn-sm">tidak</button>
-          <button class="btn btn-sm btn-primary">oke</button>
+          <button id="alertNo" class="btn btn-sm">tidak</button>
+          <button id="alertYes" class="btn btn-sm btn-neutral">oke</button>
         </div>
       </div>
     </div>
